--- a/Listagem_Filmes/app/src/main/res/layout/movie_item.xml
+++ b/Listagem_Filmes/app/src/main/res/layout/movie_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp"
-    app:cardElevation="2dp">
+    app:cardElevation="2dp"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
